<resources>
    <string name="app_name">Health Demo</string>

    <!--sign in fragment-->
    <string name="user_name">User Name</string>
    <string name="sign_up_right_way">Sign up right way</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country_region">Country/Region</string>
    <string name="code">Code</string>
    <string name="send">send</string>
    <string name="change">change</string>
    <string name="registration_means_you_agree">Registration means you agree</string>
    <string name="user_agreement_privacy_policy">User Agreement | Privacy Policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="ques_1">Do you feel any of these: your handsor feet are always cold, your legs or ankles appear swollen, your feet or hands tingle or frequently feel numb ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bp_unit">--/--mmHg</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="measure_now">Measure Now</string>
    <string name="bpm">-bpm</string>
    <string name="respiretory_rate">Respiretory Rate</string>
    <string name="temp_unit">-C</string>
    <string name="body_temperature">Body Temperature  </string>
    <string name="spo2">-%/--bpm</string>
    <string name="heart_rate">SpO2/Heart Rate</string>
    <string name="insert_strip">Please insert the blood glucose test strip into the blood glucose test port of the device</string>
    <string name="next">next</string>
    <string name="body_ntemperature">Body\nTemperature</string>
</resources>
